# docu-mind

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: ca061f771127_create_fulltexts_table.py
configs/: agent.yaml  app.yaml  logging.yaml  pipeline.yaml
paths/: project_paths.py
scripts/: index_documents.py  query.py  query_agent.py
src/: core_schemas.py  logger_setup.py
src/agent/: custom_agent.py  factory.py
src/agent/tools/: ask_clarification.py  fetch_full_document.py  list_documents.py  list_metadata.py  search_chunks.py  search_chunks_by_field.py  search_chunks_by_json_filter.py  summarize_document.py  tool_factory.py
src/agents/: factory.py
src/agents/implementations/: custom_agent.py
src/agents/tools/: fetch_full_document.py  list_documents.py  list_metadata.py  search_chunks.py  search_chunks_by_field.py  search_chunks_by_json_filter.py  summarize_document.py  tool_factory.py
src/chunkers/: factory.py
src/chunkers/implementations/: recursive_chunker.py
src/config/: loader.py  schemas.py
src/config/schemas/: agent.py  app.py  clients.py  (+2 more)
src/configs/: loader.py
src/core/: schemas.py
src/document_processors/: base.py  factory.py
src/documents_stores/: base.py  factory.py
src/embedders/: factory.py
src/graph_builders/: base.py  factory.py
src/graph_stores/: base.py  factory.py
src/llm/: factory.py  llm_factory.py
src/loaders/: base.py  factory.py
src/logger/: logger_setup.py
src/retrievers/: base.py  factory.py
src/vector_stores/: base.py  factory.py
src/vectors_builders/: base.py  factory.py
(+141 files in other folders)
